/*
 * Copyright 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "com/alexvanyo/composelife/preferences/proto/algorithm.proto";
import "com/alexvanyo/composelife/preferences/proto/current_shape_type.proto";
import "com/alexvanyo/composelife/preferences/proto/dark_theme_config.proto";
import "com/alexvanyo/composelife/preferences/proto/shapes.proto";

option java_package = "com.alexvanyo.composelife.preferences.proto";
option java_multiple_files = true;

message PreferencesProto {
  AlgorithmProto algorithm = 1;
  CurrentShapeTypeProto current_shape_type = 2;
  RoundRectangleProto round_rectangle = 3;
  DarkThemeConfigProto dark_theme_config = 4;
}
